...
  ];

  /// Label ramah-pengguna (Bahasa Indonesia).
  String get label {
    switch (this) {
      case GazeDirection.depan:
        return 'Fokus ke depan';
      case GazeDirection.atas:
        return 'Menengadah ke atas';
      case GazeDirection.bawah:
        return 'Menunduk ke bawah';
      case GazeDirection.kiri:
        return 'Menoleh ke kiri';
      case GazeDirection.kanan:
        return 'Menoleh ke kanan';
...
